[package]
name = "traffic"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking", "png"] }
bevy_asset_loader = { version = "0.23.0", features = ["2d", "3d"] }
bevy_spritesheet_animation = { version = "3.0.0", features = []}

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
